--- a/tours/tour22.html
+++ b/tours/tour22.html
@@ -258,8 +258,8 @@
                             <li class="mb-3"><i class="fa-li fa-solid fa-motorcycle fa-lg"></i><span
                                     class=" fw-bold">機　　車</span>：機車兩人一部，不含油資。務請自備駕照</li>
                             <li class="mb-3"><i class="fa-li fa-solid fa-van-shuttle fa-lg"></i><span
-                                    class=" fw-bold">接　　駁</span>：<br>來程時，車行會在機場（或碼頭）接您，行李將由車行送至民宿，讓您立即輕鬆開始旅程
-                                <br>回程時，只需前往車行還車，車行將送您到機場（或碼頭）。車行會來民宿收行李，並送到機場(碼頭)給您
+                                    class=" fw-bold">接　　駁</span>：<br>來程時，車行會在機場（或碼頭）接您，行李將由車行送至飯店，讓您立即輕鬆開始旅程
+                                <br>回程時，只需前往車行還車，車行將送您到機場（或碼頭）。車行會來飯店收行李，並送到機場(碼頭)給您
                             </li>
                             
                             <li class="mb-3"><i class="fa-li fa-solid fa-fish fa-lg"></i><span
